[tool.poetry]
name = "nitrogen"
version = "0.1.0"
description = "a simple and very cool nitro generator that gets the job done"
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.4"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
